@@ -181,6 +181,10 @@ class EngineServerTestCase(unittest.TestCase):
         self.assertEqual(
             contentdisp, 'attachment; filename=output--hazard_map-mean_.csv')
 
+        # check oqparam
+        resp = self.get('%s/oqparam' % job_id)  # dictionary of parameters
+        self.assertEqual(resp['calculation_mode'], 'classical')
+
     def test_err_1(self):
         # the rupture XML file has a syntax error
         job_id = self.postzip('archive_err_1.zip')
